updated content added contact form

--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -34,3 +34,15 @@
     }
   }
 }
+
+.contactForm label {
+  font-size: 2rem;
+}
+.contactForm  input, .contactForm  textarea {
+  display: block;
+  width: 520px;
+}
+
+.contactForm button {
+  background: none;
+}
