--- a/src/components/Contact/contact.html
+++ b/src/components/Contact/contact.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form className="contactForm" name="contact" method="POST" data-netlify="true">
+    <form className="contactForm"  data-netlify-recaptcha="true" name="contact" method="POST" data-netlify="true">
         <p>
             <label>Name: <input type="text" name="name" /></label>
           </p>
@@ -17,7 +17,7 @@
           <p>
             <label>Message: <textarea name="message"></textarea></label>
           </p>
-          <div netlify-recaptcha></div>
+          <div data-netlify-recaptcha="true"></div>
           <p>
             <button className="cta-btn cta-btn--resume" type="submit">Send</button>
           </p>
