--- a/src/components/Contact/contact.html
+++ b/src/components/Contact/contact.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form className="contactForm"  data-netlify-recaptcha="true" name="contact" method="POST" data-netlify="true">
+    <form className="contactForm" name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
+        <input type="hidden" name="form-name" value="contact" />
         <p>
             <label>Name: <input type="text" name="name" /></label>
           </p>
@@ -21,7 +22,7 @@
           <p>
             <button className="cta-btn cta-btn--resume" type="submit">Send</button>
           </p>
-    </form>
+        </form>
 </body>
 </html>
 
