--- a/src/components/Contact/contact.html
+++ b/src/components/Contact/contact.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form className="contactForm" name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
+    <form className="contactForm" name="contact" method="POST" data-netlify="true">
         <input type="hidden" name="form-name" value="contact" />
         <p>
             <label>Name: <input type="text" name="name" /></label>
@@ -18,7 +18,7 @@
           <p>
             <label>Message: <textarea name="message"></textarea></label>
           </p>
-          <div data-netlify-recaptcha="true"></div>
+          
           <p>
             <button className="cta-btn cta-btn--resume" type="submit">Send</button>
           </p>
