--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -37,10 +37,11 @@
 
 .contactForm label {
   font-size: 2rem;
+  width: 100%;
 }
 .contactForm  input, .contactForm  textarea {
   display: block;
-  width: 520px;
+  width: 100%;
 }
 
 .contactForm button {
